# aggregate-signatures

./: .clang-tidy  .gitattributes  CMakeLists.txt  README.md  run_experiments.sh
.githooks/pre-commit.d/: 01_static-analysis.sh  02_code-formatting.sh
.githooks/pre-push.d/: 01_tests.sh
cmake/: DocTest.cmake
include/: benchmark.h  bgls.h  bls.h  fischlin.h
results/: aggsig.csv  evaluation.ipynb
src/: CMakeLists.txt  benchmark.cpp  bgls.cpp  bls.cpp  fischlin.cpp  main.cpp
tests/: CMakeLists.txt  bgls-t.cpp  bls-t.cpp  fischlin-t.cpp  main-t.cpp
